--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,17 +1,1 @@
-<style media="screen">
-  li {
-    background-color: #E69A8E;
-    margin-bottom: 10px;
-    padding: 10px;
-    width: 50%;
-    font-family: sans-serif;
-  }
-</style>
-
-<h1>BURGERLICIOUS</h1>
-
-<ul>
-{{#each allBurgers }}
-  <li><button>{{burger}}</button></li>
-{{/each}}
-</ul>
+<h1>{{burgers}}</h1>
