--- a/views/all-burgers.handlebars
+++ b/views/all-burgers.handlebars
@@ -9,9 +9,16 @@
 </style>
 
 <h1>BURGERLICIOUS</h1>
-
+<h2>All Burgers</h2>
 <ul>
-{{#each}}
-  <li><button>{{burgers}}</button></li>
+{{#each object}}
+  <li><button class= "eachBurger">{{burgers}}</button></li>
 {{/each}}
+</ul>
+
+<h2>Burgers Eaten</h2>
+<ul>
+    {{#each updateObject}}
+<li><button>{{burgers}}</button></li>
+    {{/each}}
 </ul>
