updating with all burger buttons

--- a/views/all-burgers.handlebars
+++ b/views/all-burgers.handlebars
@@ -12,7 +12,7 @@
 <h2>All Burgers (click to eat one)</h2>
 <ul>
 {{#each burgers}}
-  <li>{{data}}</li>
+  <li><button>{{this.burger_name}}</button></li>
 {{/each}}
 </ul>
 
