--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="/assets/css/style.css"/>
 		<title>Burgerlicious</title>
+		<script src="/assets/js/burgerjs.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
 	</body>
 </html>
+
+{{!-- type="text/css" --}}
