changed index handlebars

--- a/views/all-burgers.handlebars
+++ b/views/all-burgers.handlebars
@@ -1,4 +1,4 @@
-<header><h1>BURGERLICIOUS</h1></header>
+{{!-- <header><h1>BURGERLICIOUS</h1></header>
 {{!-- This allows the user to add new burgers to the All Burgers list to be eaten --}}
 
 <div id="body">
@@ -22,7 +22,7 @@
 {{/each}}
 </ul> --}}
 
-<div class="row">
+{{!-- <div class="row">
   <div class="col-sm-4"></div>
   <div class="col-sm-4">
     {{#each burgers}}
@@ -36,4 +36,4 @@
   </div>
 </div>
 <div class="col-sm-4"></div>
-</div>
+</div> --}} --}}
